# react_typescript_django_channel_drf

./: .gitignore  README.md  package-lock.json  pyproject.toml
account/: authenticate.py  views.py
account/migrations/: 0001_initial.py
djchat/: settings.py  urls.py
download/: 6.3.txt
reactchat/: package-lock.json
reactchat/src/services/: AuthServices.ts
server/: views.py
server/migrations/: 0001_initial.py  0002_remove_channel_banner_remove_channel_icon_and_more.py
webchat/: consumer.py
webchat/migrations/: 0001_initial.py
